Regression(r138786): Causes webaudio tests to crash https://bugs.webkit.org/show_bug.cgi?id=106182

Reviewed by Philippe Normand.

Source/WebCore:

Partially revert r138786 since it causes crashes in webaudio
tests. The WebProcess would actually become unresponsive due
to source element never going to PLAYING state.

Only the changes to webKitWebAudioSrcChangeState() were reverted.

No new tests, already covered by existing tests.

* platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:
(webKitWebAudioSrcChangeState):

LayoutTests:

Unskip several webaudio tests for EFL WK2 now that the
regression was fixed.

* platform/efl-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/124403@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138935 268f45cc-cd09-0410-ab3c-d52691b4dbfc